--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <canvas id="hist" width="700" height="900" aria-label="Histograma"></canvas>
     </div>
 
-    <footer>Regra do desenho dos pinos: a linha 0 tem 0 pinos; a linha r tem r pinos.</footer>
+    <footer>Regra do desenho dos pinos: a linha 0 tem 0 pinos; a linha n tem n pinos.</footer>
   </div>
 
 <script>
