--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <section class="panel controls">
       <div class="control">
-        <label>Níveis (n)</label>
+        <label>Ordem (n)</label>
         <input id="levels" type="number" value="20" min="1" max="60" />
       </div>
       <div class="control">
