--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 
     <section class="panel controls">
       <div class="control">
-        <label>Ordem (n)</label>
-        <input id="levels" type="number" value="20" min="1" max="60" />
+        <label>Ordem (n) - máx.50</label>
+        <input id="levels" type="number" value="20" min="1" max="50" />
       </div>
       <div class="control">
-        <label>Probabilidade de "direita" (p)</label>
+        <label>Probabilidade de "direita" (p) - entre 0 e 1</label>
         <input id="prob" type="number" step="0.01" value="0.50" min="0" max="1" />
       </div>
       <div class="control">
