--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
     htx.fillStyle = '#444';
     htx.font = '12px system-ui';
     htx.textAlign = 'center';
-    htx.fillText('probabilidade', 0, 0);
+    htx.fillText('Probabilidade', 0, 0);
     htx.restore();
 
     // Probabilidades
